# ProjectManager_RESTAPI

./: .env.example  Procfile  README.md  pyproject.toml  requirements.txt
ProjectManager/: asgi.py  settings.py  urls.py  wsgi.py
projects/: admin.py  models.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py
