[tool.poetry]
name = "projectmanager"
version = "0.1.0"
description = "REST API for managing projects and vacancies"
authors = ["maxx <m.petrykin@gmx.de>"]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.4"
djangorestframework = "^3.16.0"
django-cors-headers = "^4.7.0"
python-dotenv = "^1.1.1"
drf-yasg = "^1.21.10"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
whitenoise = "^6.6.0"
django-heroku = "^0.3.1"
dj-database-url = "^2.2.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "ProjectManager"